# luban-workshop

./: .gitignore  AGENTS.md  PRODUCT_MAPPING.md  README.md  README_BOT.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-04-20-glm-coding-bot.md  2026-04-26-glm-coding-stability-plan.md
docs/superpowers/specs/: 2026-04-20-glm-coding-bot-design.md  2026-04-26-glm-coding-stability-design.md
examples/: advanced_config.py  basic_usage.py
glm_coding_bot/: __main__.py  cli.py  product_mapping.py  semi_auto_bot.py  simple_bot.py
glm_coding_bot/core/: __init__.py  browser_controller.py  captcha_solver.py  stock_monitor.py
glm_coding_bot/utils/: time_sync.py
luban_workshop/tools/png2Icons/: main.py
tests/: __init__.py  test_browser_controller.py  test_captcha_solver.py  test_cli_buy_flow.py  test_cli_check_login.py  test_integration.py  test_png2icons.py  test_purchase_coordinator.py  test_remove_watermark.py  test_stock_monitor.py  test_subtitle_translation.py  test_video_download.py  test_video_features.py  test_video_transcribe.py  test_youtube_download.py
tools/: __init__.py
tools/glm_coding_bot/: README.md  __main__.py  cli.py  config.py  product.json  product_mapping.py
tools/glm_coding_bot/core/: __init__.py  browser_controller.py  captcha_solver.py  purchase_coordinator.py  stock_monitor.py
tools/glm_coding_bot/utils/: logger.py  time_sync.py
tools/png2Icons/: README.md  __init__.py  icon.icns
tools/remove_watermark/: README.md  main.py
tools/video_download/: README.md  __init__.py  main.py
tools/video_transcribe/: README.md  __init__.py  main.py
