[project]
name = "luban-workshop"
version = "0.1.0"
description = "A collection of useful tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "opencv-python>=4.9.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "playwright>=1.40.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
glm-bot = [
    "onnxruntime>=1.16.0",
]
video = [
    "playwright>=1.40.0",
]
video-transcribe = [
    "faster-whisper>=1.0.0",
    "googletrans>=3.1.0a0",
]

[tool.setuptools.packages.find]
include = ["tools", "tools.*", "glm_coding_bot", "glm_coding_bot.*"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
png2icons = "tools.png2Icons.main:main"
remove_watermark = "tools.remove_watermark.main:main"
video_download = "tools.video_download.main:main"
video_transcribe = "tools.video_transcribe.main:main"
glm-coding-bot = "glm_coding_bot.cli:cli"
